build: :art: adicionar arquivos de formatação

--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,6 @@ profile-*
 .idea
 
 # vscode
-.vscode
 *code-workspace
 
 # clinic
@@ -57,3 +56,16 @@ profile*
 *clinic*
 *flamegraph*
 .env
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
