chore: :truck: renomear nome do projeto
porque reutilizar um código merda é melhor do que fazer melhor do zero, disse um idiota

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portal-agl-api",
+  "name": "express-js-mongoose-api",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "renatocfrancisco",
   "license": "ISC",
   "dependencies": {
     "argon2": "^0.40.1",
